Fix vertical alignment for multiple (co)leaders.

--- a/sass/nodes.scss
+++ b/sass/nodes.scss
@@ -79,5 +79,6 @@
   .group-trip-details-wrapper .field-label,
   .group-trip-details-wrapper .field-items {
     display: inline-block;
+    vertical-align: text-top;
   }
 }
